# a448_2024

./: .buildinfo  README.md  _config.yml  _toc.yml  environment.yml  genindex.html  index.html  index.html~  index.md  objects.inv  pyproject.toml  python_install.html  schedule.html  search.html  searchindex.js
_sources/: index.md  schedule.md
data/: MYD11A1.A2019240.h09v04.061.2020359024628_LST_Day_1km.tif  MYD11A1.A2019240.h10v04.061.2020359024650_LST_Day_1km.tif
notebooks/: image_merge.ipynb  image_merge.md  modis_temperature_example.ipynb  modis_temperature_example.md  pre_pca_pha.ipynb  resample.ipynb  resample.md
notebooks/week1/: notes.html
