[build-system]
requires = [
    "setuptools >= 48",
    "setuptools_scm[toml] >= 4, <6",
    "setuptools_scm_git_archive",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[project]
name = "a405"
description = "atsc405 code"
authors = [
  { name="Philip Austin", email="paustin@eoas.ubc.ca" },
]
dynamic = ["version"]

[project.scripts]
killprocs = "a405.utils.killprocs:main"
killjobs = "a405.utils.killjobs:main"
pyncdump = "a405.utils.ncdump:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools_scm]
# this finds last tag of the form v0.2.8
# copied from https://github.com/dib-lab/screed/blob/latest/pyproject.toml
#git_describe_command = "git describe --dirty --tags --long --match v* --first-parent"
write_to = "src/a405/_version.py"
root = "."


